springcloud-distributed-system-sample/springcloud-sample-parent/src/main/scripts/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: operator-gateway
  namespace: operator

spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "kxu.kevin.com"
        - "nacos.kevin.com"
        - "sentinel.kevin.com"
        - "seata.kevin.com"
        - "zipkin.kevin.com"
        - "prometheus.kevin.com"
        - "grafana.kevin.com"
        - "rocketmq.kevin.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: seata-gateway
  namespace: operator
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 31400
      name: tcp
      protocol: TCP
    hosts:
    - "seata.kevin.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tcp-gateway
  namespace: operator
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 10911
        name: rocketmq-10911
        protocol: TCP
      hosts:
        - "*"
    - port:
        number: 10909
        name: rocketmq-10909
        protocol: TCP
      hosts:
        - "*"
    - port:
        number: 9876
        name: rocketmq-9876
        protocol: TCP
      hosts:
        - "*"
