springcloud-distributed-system-sample/springcloud-sample-parent/src/main/scripts/nacos.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: operator
  labels:
    app: nacos
    service: nacos
spec:
#  type: ExternalName
#  externalName: nacos.operator.svc.cluster.local
  ports:
    - name: ui
      port: 8848
    - name: be
      port: 9848
  selector:
    app: nacos

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
  namespace: operator
  labels:
    app: nacos
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nacos
      version: v1
  template:
    metadata:
      labels:
        app: nacos
        version: v1
    spec:
      serviceAccountName: nacos-svc
      containers:
        - name: nacos
          image: nacos/nacos-server:v2.2.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9848
            - containerPort: 8848
          volumeMounts:
            - mountPath: /home/nacos/conf/application.properties
              name: config
      volumes:
        - name: config
          hostPath:
            path: /run/desktop/mnt/host/d/workspace/java-sample/springcloud-ali/src/main/init/config/nacos.application.properties
            type: File

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: operator
  name: nacos-ui
spec:
  hosts:
    - "nacos.kevin.com"
  gateways:
    - operator-gateway
  http:
    - match:
        - uri:
            prefix: /nacos
      route:
        - destination:
            host: nacos
            port:
              number: 8848
