springcloud-distributed-system-sample/springcloud-sample-parent/src/main/scripts/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: operator
  labels:
    app: prometheus
    service: prometheus
spec:
  ports:
    - name: prometheus
      port: 9090
  selector:
    app: prometheus

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: operator
  labels:
    app: prometheus
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
      version: v1
  template:
    metadata:
      labels:
        app: prometheus
        version: v1
    spec:
      serviceAccountName: prometheus-svc
      containers:
        - name: prometheus
          image: prom/prometheus:v2.41.0
          imagePullPolicy: IfNotPresent
          args:
            - "--web.enable-lifecycle"
          ports:
            - containerPort: 9090
          volumeMounts:
            - mountPath: /prometheus/prometheus.yml
              name: config
      volumes:
        - name: config
          hostPath:
            path: /run/desktop/mnt/host/d/workspace/java-sample/springcloud-distributed-system-sample/springcloud-sample-parent/src/main/init/config/prometheus.yaml
            type: File

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-cli
  namespace: operator
  labels:
    app: prometheus-cli
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-cli
      version: v1
  template:
    metadata:
      labels:
        app: prometheus-cli
        version: v1
    spec:
      serviceAccountName: prometheus-svc
      containers:
        - name: prometheus-cli
          image: prometheus-cli
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /work/prometheus.yaml
              name: config
      volumes:
        - name: config
          hostPath:
            path: /run/desktop/mnt/host/d/workspace/java-sample/springcloud-distributed-system-sample/springcloud-sample-parent/src/main/init/config/prometheus.yaml
            type: File

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: operator
  name: prometheus
spec:
  hosts:
    - "prometheus.kevin.com"
  gateways:
    - operator-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus
            port:
              number: 9090
