springcloud-distributed-system-sample/springcloud-sample-parent/src/main/scripts/redis.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: operator
  name: redis
  labels:
    app: redis
    service: redis
spec:
  ports:
    - port: 6379
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: operator
  name: redis
  labels:
    app: redis
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      version: v1
  template:
    metadata:
      labels:
        app: redis
        version: v1
    spec:
      serviceAccountName: redis-svc
      containers:
        - name: redis
          image: redislabs/redisearch:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-data
      volumes:
        - name: redis-data
          hostPath:
            path:   /run/desktop/mnt/host/d/data/redis/shopping
            type: Directory

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis
  namespace: operator
spec:
  hosts:
    - "redis.kevin.com" # name of internal Mongo service
  gateways:
    - rocketmq-tcp-gateway # can omit the namespace if gateway is in same namespace as virtual service.
  tcp:
    - match:
        - port: 6379
      route:
        - destination:
            host: redis
