springcloud-distributed-system-sample/springcloud-sample-parent/src/main/scripts/rocketmq-broker.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketmq-broker
  namespace: operator
  labels:
    app: rocketmq-broker
    service: rocketmq-broker
spec:
#  type: ExternalName
#  externalName: nacos.operator.svc.cluster.local
  ports:
    - name: recover
      port: 10911
    - name: sync
      port: 10909
  selector:
    app: rocketmq-broker

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketmq-broker
  namespace: operator
  labels:
    app: rocketmq-broker
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketmq-broker
      version: v1
  template:
    metadata:
      labels:
        app: rocketmq-broker
        version: v1
    spec:
      serviceAccountName: rocketmq-broker-svc
      containers:
        - name: rocketmq-broker
          image: apache/rocketmq:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10911
            - containerPort: 10909
          command:
            - /bin/sh
          args:
            - mqbroker
            - "-c"
            - "/etc/rocketmq/broker.conf"
          volumeMounts:
            - mountPath: /etc/rocketmq/broker.conf
              name: config
      volumes:
        - name: config
          hostPath:
            path: /run/desktop/mnt/host/d/workspace/java-sample/springcloud-ali/src/main/init/config/broker.conf
            type: File

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rocketmq-broker
  namespace: operator
spec:
  hosts:
    - "*"
  gateways:
    - tcp-gateway
  tcp:
    - match:
        - port: 10911
      route:
        - destination:
            host: rocketmq-broker
            port:
              number: 10911
    - match:
        - port: 10909
      route:
        - destination:
            host: rocketmq-broker
            port:
              number: 10909
