springcloud-distributed-system-sample/springcloud-sample-parent/src/main/scripts/seata.yaml
apiVersion: v1
kind: Service
metadata:
  name: seata
  namespace: operator
  labels:
    app: seata
    service: seata
spec:
  ports:
    - name: major
      port: 8091
    - name: minor
      port: 7091
  selector:
    app: seata

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seata
  namespace: operator
  labels:
    app: seata
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seata
      version: v1
  template:
    metadata:
      labels:
        app: seata
        version: v1
    spec:
      serviceAccountName: seata-svc
      containers:
        - name: seata
          image: seataio/seata-server:1.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8091
            - containerPort: 7091
          volumeMounts:
            - mountPath: /seata-server/resources/application.yml
              name: config
      volumes:
        - name: config
          hostPath:
            path: /run/desktop/mnt/host/d/tools/seata-server-1.7.0/seata/conf/application-nacos.yml
            type: File

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: seata
  namespace: operator
spec:
  hosts:
    - "seata.kevin.com" # name of internal Mongo service
  gateways:
    - seata-gateway # can omit the namespace if gateway is in same namespace as virtual service.
  tcp:
    - match:
        - port: 31400
      route:
        - destination:
            host: seata
            port:
              number: 8091
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: seata-dashboard
  namespace: operator
spec:
  hosts:
    - "seata.kevin.com" # name of internal Mongo service
  gateways:
    - operator-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: seata
            port:
              number: 7091
