springcloud-distributed-system-sample/springcloud-sample-parent/src/main/scripts/zipkin.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: operator
  labels:
    app: zipkin
    service: zipkin
spec:
  ports:
    - name: zipkin
      port: 9411
  selector:
    app: zipkin

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
  namespace: operator
  labels:
    app: zipkin
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
      version: v1
  template:
    metadata:
      labels:
        app: zipkin
        version: v1
    spec:
      serviceAccountName: zipkin-svc
      containers:
        - name: zipkin
          image: openzipkin/zipkin
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9411
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: operator
  name: zipkin
spec:
  hosts:
    - "zipkin.kevin.com"
  gateways:
    - operator-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: zipkin
            port:
              number: 9411
